--- a/pages/catgory/index.wxml
+++ b/pages/catgory/index.wxml
@@ -24,12 +24,12 @@
         </view>
     </scroll-view> -->
     <scroll-view class='nav_right' scroll-y>
-        <view wx:if='{navRightItems[curIndex]' style='padding-bottom: 10px;'>
-            <block wx:key="{{index}}" wx:for="{{navRightItems[curIndex]}}" wx:for-item="item">
+        <view wx:if='{{navRightItems[curIndex]}}' style='padding-bottom: 10px;'>
+            <block wx:key="index" wx:for="{{navRightItems[curIndex]}}" wx:for-item="item">
                 <view class='jd-category'>
                     <view class='title'>{{item.title}}</view>
                     <view class='jd-category-wrap'>
-                        <block wx:key="{{index}}" wx:for="{{item.desc}}" wx:for-item="list">
+                        <block wx:key="index" wx:for="{{item.desc}}" wx:for-item="list">
                             <view class='jd-category-style' data-txt="{{list.text}}" bindtap='showListView'>
                                 <image class='list_img' src='{{list.img}}'></image>
                                 <text class='list_text'>{{list.text}}</text>
